testdata/baselines/reference/submodule/conformance/emitArrowFunctionWhenUsingArguments01_ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
emitArrowFunctionWhenUsingArguments01_ES6.ts(2,15): error TS2304: Cannot find name 'arguments'.
emitArrowFunctionWhenUsingArguments01_ES6.ts(19,15): error TS2304: Cannot find name 'arguments'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== emitArrowFunctionWhenUsingArguments01_ES6.ts (2 errors) ====
    var a = () => {
        var arg = arguments[0];  // error
                  ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.
    }
    
    var b = function () {
        var a = () => {
            var arg = arguments[0];  // error
        }
    }
    
    function baz() {
    	() => {
    		var arg = arguments[0];
    	}
    }
    
    function foo(inputFunc: () => void) { }
    foo(() => {
        var arg = arguments[0];  // error
                  ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.
    });
    
    function bar() {
        var arg = arguments[0];  // no error
    }
    
    
    () => {
    	function foo() {
    		var arg = arguments[0];  // no error
    	}
    }